--- a/index.html
+++ b/index.html
@@ -1,1 +1,121 @@
+<!DOCTYPE html>
+<html lang="vi">
+<head>
+  <meta charset="UTF-8">
+  <title>Tài chính gia đình</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="manifest" href="manifest.json">
+  <style>
+    :root {
+      --primary: #2ecc71;
+      --bg: #f4f6f8;
+      --card: #ffffff;
+      --text: #333;
+    }
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+      background: var(--bg);
+      margin: 0;
+      padding: 10px;
+      color: var(--text);
+    }
+    h1 { text-align: center; }
+    .card {
+      background: var(--card);
+      border-radius: 14px;
+      padding: 15px;
+      margin-bottom: 12px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.05);
+    }
+    input, select, button {
+      width: 100%;
+      padding: 10px;
+      margin-top: 6px;
+      border-radius: 10px;
+      border: 1px solid #ddd;
+    }
+    button {
+      background: var(--primary);
+      color: #fff;
+      border: none;
+      font-weight: bold;
+    }
+    .row {
+      display: flex;
+      gap: 8px;
+    }
+    .row > * { flex: 1; }
+    .list-item {
+      display: flex;
+      justify-content: space-between;
+      margin-top: 6px;
+    }
+  </style>
+</head>
+<body>
 
+<h1>💰 Tài chính gia đình</h1>
+
+<div class="card">
+  <h3>➕ Ghi chi tiêu</h3>
+  <input id="amount" type="number" placeholder="Số tiền (VND)">
+  <select id="category">
+    <option>Ăn uống</option>
+    <option>Đi chợ</option>
+    <option>Giáo dục</option>
+    <option>Nhà ở</option>
+    <option>Di chuyển</option>
+    <option>Du lịch</option>
+    <option>Khác</option>
+  </select>
+  <button onclick="addExpense()">Lưu chi tiêu</button>
+</div>
+
+<div class="card">
+  <h3>📊 Chi tiêu tháng này</h3>
+  <div id="expenseList"></div>
+</div>
+
+<div class="card">
+  <h3>🎯 Mục tiêu 2–3 năm</h3>
+  <div class="list-item">
+    <span>Mua BĐS</span><strong>Ưu tiên cao</strong>
+  </div>
+  <div class="list-item">
+    <span>Du lịch gia đình</span><strong>Hàng năm</strong>
+  </div>
+</div>
+
+<script>
+  let expenses = JSON.parse(localStorage.getItem("expenses") || "[]");
+
+  function addExpense() {
+    const amount = document.getElementById("amount").value;
+    const category = document.getElementById("category").value;
+    if (!amount) return;
+    expenses.push({
+      amount: Number(amount),
+      category,
+      date: new Date().toLocaleDateString()
+    });
+    localStorage.setItem("expenses", JSON.stringify(expenses));
+    document.getElementById("amount").value = "";
+    renderExpenses();
+  }
+
+  function renderExpenses() {
+    const list = document.getElementById("expenseList");
+    list.innerHTML = "";
+    expenses.slice(-10).reverse().forEach(e => {
+      const div = document.createElement("div");
+      div.className = "list-item";
+      div.innerHTML = `<span>${e.category} (${e.date})</span><strong>${e.amount.toLocaleString()}đ</strong>`;
+      list.appendChild(div);
+    });
+  }
+
+  renderExpenses();
+</script>
+
+</body>
+</html>
