--- a/index.html
+++ b/index.html
@@ -1,120 +1,172 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-  <meta charset="UTF-8">
-  <title>Tài chính gia đình</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="manifest" href="manifest.json">
-  <style>
-    :root {
-      --primary: #2ecc71;
-      --bg: #f4f6f8;
-      --card: #ffffff;
-      --text: #333;
-    }
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-      background: var(--bg);
-      margin: 0;
-      padding: 10px;
-      color: var(--text);
-    }
-    h1 { text-align: center; }
-    .card {
-      background: var(--card);
-      border-radius: 14px;
-      padding: 15px;
-      margin-bottom: 12px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.05);
-    }
-    input, select, button {
-      width: 100%;
-      padding: 10px;
-      margin-top: 6px;
-      border-radius: 10px;
-      border: 1px solid #ddd;
-    }
-    button {
-      background: var(--primary);
-      color: #fff;
-      border: none;
-      font-weight: bold;
-    }
-    .row {
-      display: flex;
-      gap: 8px;
-    }
-    .row > * { flex: 1; }
-    .list-item {
-      display: flex;
-      justify-content: space-between;
-      margin-top: 6px;
-    }
-  </style>
+<meta charset="UTF-8">
+<title>Tài chính gia đình</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+<style>
+:root{
+ --primary:#2ecc71;
+ --bg:#f2f4f7;
+ --card:#fff;
+ --text:#333;
+}
+body{
+ font-family:-apple-system,BlinkMacSystemFont,sans-serif;
+ background:var(--bg);
+ margin:0;
+ padding:12px;
+ color:var(--text);
+}
+h1{text-align:center}
+.card{
+ background:var(--card);
+ border-radius:18px;
+ padding:16px;
+ margin-bottom:14px;
+ box-shadow:0 6px 16px rgba(0,0,0,.08);
+}
+input,select,button{
+ width:100%;
+ padding:12px;
+ margin-top:6px;
+ border-radius:12px;
+ border:1px solid #ddd;
+}
+button{
+ background:var(--primary);
+ color:#fff;
+ border:none;
+ font-weight:600;
+}
+.item{display:flex;justify-content:space-between;margin-top:6px}
+.small{font-size:13px;color:#777}
+.warn{color:#e67e22;font-weight:600}
+.good{color:#27ae60;font-weight:600}
+.progress{
+ background:#eee;border-radius:10px;height:10px;margin-top:4px
+}
+.progress div{
+ height:100%;background:var(--primary)
+}
+</style>
 </head>
+
 <body>
 
-<h1>💰 Tài chính gia đình</h1>
+<h1>🏦 Tài chính gia đình</h1>
 
+<!-- BUDGET -->
 <div class="card">
-  <h3>➕ Ghi chi tiêu</h3>
-  <input id="amount" type="number" placeholder="Số tiền (VND)">
-  <select id="category">
-    <option>Ăn uống</option>
-    <option>Đi chợ</option>
-    <option>Giáo dục</option>
-    <option>Nhà ở</option>
-    <option>Di chuyển</option>
-    <option>Du lịch</option>
-    <option>Khác</option>
-  </select>
-  <button onclick="addExpense()">Lưu chi tiêu</button>
+<h3>🎯 Ngân sách theo danh mục (tháng)</h3>
+<input id="bCat" placeholder="Danh mục (Ăn uống…)">
+<input id="bVal" type="number" placeholder="Ngân sách">
+<button onclick="addBudget()">Lưu ngân sách</button>
+<div id="budgetList"></div>
 </div>
 
+<!-- EXPENSE -->
 <div class="card">
-  <h3>📊 Chi tiêu tháng này</h3>
-  <div id="expenseList"></div>
+<h3>➕ Chi tiêu</h3>
+<input id="amount" type="number" placeholder="Số tiền">
+<select id="category"></select>
+<button onclick="addExpense()">Lưu</button>
 </div>
 
+<!-- INVEST -->
 <div class="card">
-  <h3>🎯 Mục tiêu 2–3 năm</h3>
-  <div class="list-item">
-    <span>Mua BĐS</span><strong>Ưu tiên cao</strong>
-  </div>
-  <div class="list-item">
-    <span>Du lịch gia đình</span><strong>Hàng năm</strong>
-  </div>
+<h3>📈 Theo dõi đầu tư</h3>
+<input id="invName" placeholder="Tên khoản đầu tư">
+<select id="invType">
+<option>An toàn</option>
+<option>Tăng trưởng</option>
+<option>Dài hạn</option>
+</select>
+<input id="invVal" type="number" placeholder="Giá trị hiện tại">
+<button onclick="addInvestment()">Thêm</button>
+<div id="invList"></div>
+</div>
+
+<!-- STRATEGY -->
+<div class="card">
+<h3>🧠 Đánh giá phân bổ</h3>
+<div id="strategy"></div>
 </div>
 
 <script>
-  let expenses = JSON.parse(localStorage.getItem("expenses") || "[]");
+let budgets=JSON.parse(localStorage.getItem("budgets")||"[]");
+let expenses=JSON.parse(localStorage.getItem("expenses")||"[]");
+let investments=JSON.parse(localStorage.getItem("investments")||"[]");
 
-  function addExpense() {
-    const amount = document.getElementById("amount").value;
-    const category = document.getElementById("category").value;
-    if (!amount) return;
-    expenses.push({
-      amount: Number(amount),
-      category,
-      date: new Date().toLocaleDateString()
-    });
-    localStorage.setItem("expenses", JSON.stringify(expenses));
-    document.getElementById("amount").value = "";
-    renderExpenses();
-  }
+function addBudget(){
+ let c=bCat.value,v=+bVal.value;
+ if(!c||!v)return;
+ budgets.push({c,v});
+ localStorage.setItem("budgets",JSON.stringify(budgets));
+ bCat.value="";bVal.value="";
+ render();
+}
 
-  function renderExpenses() {
-    const list = document.getElementById("expenseList");
-    list.innerHTML = "";
-    expenses.slice(-10).reverse().forEach(e => {
-      const div = document.createElement("div");
-      div.className = "list-item";
-      div.innerHTML = `<span>${e.category} (${e.date})</span><strong>${e.amount.toLocaleString()}đ</strong>`;
-      list.appendChild(div);
-    });
-  }
+function addExpense(){
+ let a=+amount.value;
+ let c=category.value;
+ if(!a)return;
+ expenses.push({a,c});
+ localStorage.setItem("expenses",JSON.stringify(expenses));
+ amount.value="";
+ render();
+}
 
-  renderExpenses();
+function addInvestment(){
+ let v=+invVal.value;
+ if(!v)return;
+ investments.push({name:invName.value,type:invType.value,value:v});
+ localStorage.setItem("investments",JSON.stringify(investments));
+ invName.value="";invVal.value="";
+ render();
+}
+
+function render(){
+ // categories
+ category.innerHTML="";
+ budgets.forEach(b=>{
+  let opt=document.createElement("option");
+  opt.text=b.c;category.add(opt);
+ });
+
+ // budget view
+ budgetList.innerHTML="";
+ budgets.forEach(b=>{
+  let spent=expenses.filter(e=>e.c==b.c).reduce((s,e)=>s+e.a,0);
+  let p=Math.min(spent/b.v*100,100);
+  budgetList.innerHTML+=`
+   <div class="item">
+    <span>${b.c}</span>
+    <strong>${spent.toLocaleString()} / ${b.v.toLocaleString()}</strong>
+   </div>
+   <div class="progress"><div style="width:${p}%"></div></div>
+   ${spent>b.v?'<p class="warn">⚠️ Vượt ngân sách</p>':''}
+  `;
+ });
+
+ // investment strategy
+ let sum={};
+ investments.forEach(i=>sum[i.type]=(sum[i.type]||0)+i.value);
+ let total=Object.values(sum).reduce((s,v)=>s+v,0);
+ let html="";
+ for(let k in sum){
+  html+=`<div class="item"><span>${k}</span><strong>${Math.round(sum[k]/total*100)}%</strong></div>`;
+ }
+ if((sum["An toàn"]||0)/total<0.45){
+  html+=`<p class="warn">⚠️ Nên tăng nhóm An toàn cho mục tiêu mua BĐS</p>`;
+ }else{
+  html+=`<p class="good">✔ Phân bổ phù hợp mục tiêu 2–3 năm</p>`;
+ }
+ strategy.innerHTML=html;
+}
+render();
 </script>
 
 </body>
