--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
 <style>
 :root{
-  --primary:#2ecc71;
-  --bg:#f1f3f6;
-  --card:#fff;
+  --primary:#4CAF50;
+  --bg:#f2f4f7;
+  --card:#ffffff;
   --text:#333;
 }
 body{
@@ -20,20 +20,20 @@ body{
   padding:12px;
   color:var(--text);
 }
-h1{text-align:center;margin-bottom:10px}
+h1{text-align:center}
 .card{
   background:var(--card);
-  border-radius:18px;
-  padding:16px;
-  margin-bottom:14px;
-  box-shadow:0 6px 16px rgba(0,0,0,.08);
+  border-radius:16px;
+  padding:14px;
+  margin-bottom:12px;
+  box-shadow:0 4px 12px rgba(0,0,0,.06);
 }
-button,input,select{
+input,select,button{
   width:100%;
-  padding:12px;
-  margin-top:6px;
-  border-radius:12px;
+  padding:10px;
+  border-radius:10px;
   border:1px solid #ddd;
+  margin-top:6px;
 }
 button{
   background:var(--primary);
@@ -41,48 +41,30 @@ button{
   border:none;
   font-weight:600;
 }
-.row{display:flex;gap:8px}
-.row>*{flex:1}
 .item{display:flex;justify-content:space-between;margin-top:6px}
-.small{font-size:13px;color:#777}
 .good{color:#27ae60;font-weight:600}
 .warn{color:#e67e22;font-weight:600}
-.bad{color:#c0392b;font-weight:600}
-.progress{
-  background:#eee;
-  border-radius:10px;
-  overflow:hidden;
-  height:10px;
-  margin-top:6px;
-}
-.progress div{
-  height:100%;
-  background:var(--primary);
-}
 </style>
 </head>
 
 <body>
 
-<h1>🏦 Tài chính gia đình</h1>
+<h1>💰 Tài chính gia đình</h1>
 
-<!-- DASHBOARD -->
+<!-- THEME -->
 <div class="card">
-<h3>📊 Tổng quan</h3>
-<div id="dashboard"></div>
-</div>
-
-<!-- INCOME -->
-<div class="card">
-<h3>💼 Thu nhập gia đình / tháng</h3>
-<input id="income" type="number" placeholder="VD: 40000000">
-<button onclick="saveIncome()">Lưu</button>
+<h3>🎨 Giao diện</h3>
+<select onchange="setTheme(this.value)">
+<option value="#4CAF50">Xanh lá</option>
+<option value="#3498db">Xanh dương</option>
+<option value="#9b59b6">Tím</option>
+<option value="#e67e22">Cam</option>
+</select>
 </div>
 
 <!-- EXPENSE -->
 <div class="card">
 <h3>➕ Chi tiêu</h3>
-<div class="row">
 <input id="amount" type="number" placeholder="Số tiền">
 <select id="category">
 <option>Ăn uống</option><option>Đi chợ</option>
@@ -90,52 +72,59 @@ button{
 <option>Di chuyển</option><option>Du lịch</option>
 <option>Khác</option>
 </select>
-</div>
 <button onclick="addExpense()">Lưu</button>
 </div>
 
 <div class="card">
-<h3>📉 Biểu đồ chi tiêu</h3>
+<h3>📊 Chi tiêu theo danh mục</h3>
 <canvas id="expenseChart"></canvas>
+</div>
+
+<!-- ASSETS -->
+<div class="card">
+<h3>🏦 Tài sản</h3>
+<input id="assetName" placeholder="Tên tài sản">
+<select id="assetType">
+<option>An toàn</option>
+<option>Tăng trưởng</option>
+<option>Rủi ro</option>
+</select>
+<input id="assetValue" type="number" placeholder="Giá trị">
+<button onclick="addAsset()">Thêm</button>
+<div id="assetList"></div>
 </div>
 
 <!-- GOALS -->
 <div class="card">
 <h3>🏠 Mục tiêu mua BĐS</h3>
-<input id="houseTarget" type="number" placeholder="Số tiền cần">
+<input id="houseTarget" type="number" placeholder="Số tiền cần (VND)">
 <input id="houseMonths" type="number" placeholder="Số tháng (24–36)">
 <button onclick="calcHouse()">Tính</button>
 <div id="houseResult"></div>
 </div>
 
-<!-- SCENARIO -->
 <div class="card">
-<h3>🔮 Kịch bản thu nhập</h3>
-<select onchange="scenario(this.value)">
-<option value="1">Hiện tại</option>
-<option value="0.8">Giảm 20%</option>
-<option value="1.3">Tăng 30%</option>
-</select>
-<div id="scenarioResult"></div>
+<h3>✈️ Quỹ du lịch</h3>
+<input id="travelBudget" type="number" placeholder="Ngân sách/năm">
+<button onclick="saveTravel()">Lưu</button>
+<div id="travelResult"></div>
 </div>
 
-<!-- BACKUP -->
+<!-- STRATEGY -->
 <div class="card">
-<h3>👨‍👩‍👧 Dùng chung & Backup</h3>
-<button onclick="exportData()">Xuất dữ liệu</button>
-<input type="file" onchange="importData(this.files[0])">
-<p class="small">Dùng để chia sẻ vợ – chồng / đổi máy</p>
+<h3>🧠 Đánh giá & chiến lược</h3>
+<div id="strategy"></div>
 </div>
 
 <script>
 let expenses=JSON.parse(localStorage.getItem("expenses")||"[]");
-let income=+localStorage.getItem("income")||0;
-let house=JSON.parse(localStorage.getItem("house")||"{}");
+let assets=JSON.parse(localStorage.getItem("assets")||"[]");
+let theme=localStorage.getItem("theme")||"#4CAF50";
+document.documentElement.style.setProperty('--primary',theme);
 
-function saveIncome(){
- income=+document.getElementById("income").value;
- localStorage.setItem("income",income);
- render();
+function setTheme(c){
+ localStorage.setItem("theme",c);
+ document.documentElement.style.setProperty('--primary',c);
 }
 
 function addExpense(){
@@ -144,76 +133,67 @@ function addExpense(){
  expenses.push({a,cat:category.value});
  localStorage.setItem("expenses",JSON.stringify(expenses));
  amount.value="";
- render();
+ renderChart();
+}
+
+function addAsset(){
+ let v=+assetValue.value;
+ if(!v)return;
+ assets.push({name:assetName.value,type:assetType.value,value:v});
+ localStorage.setItem("assets",JSON.stringify(assets));
+ assetName.value="";assetValue.value="";
+ renderAssets(); renderStrategy();
+}
+
+function renderChart(){
+ let sum={};
+ expenses.forEach(e=>sum[e.cat]=(sum[e.cat]||0)+e.a);
+ if(window.chart)chart.destroy();
+ chart=new Chart(expenseChart,{
+  type:'pie',
+  data:{labels:Object.keys(sum),
+  datasets:[{data:Object.values(sum)}]}
+ });
+}
+
+function renderAssets(){
+ assetList.innerHTML="";
+ assets.forEach(a=>{
+  assetList.innerHTML+=
+  `<div class="item"><span>${a.name} (${a.type})</span><strong>${a.value.toLocaleString()}đ</strong></div>`;
+ });
+}
+
+function renderStrategy(){
+ let total=assets.reduce((s,a)=>s+a.value,0);
+ let safe=assets.filter(a=>a.type=="An toàn").reduce((s,a)=>s+a.value,0);
+ let ratio=Math.round(safe/total*100||0);
+ let html=`<div class="item"><span>Tổng tài sản</span><strong>${total.toLocaleString()}đ</strong></div>`;
+ html+=`<div class="item"><span>An toàn</span><strong>${ratio}%</strong></div>`;
+ html+= ratio<45
+ ? `<p class="warn">⚠️ Nên tăng tài sản an toàn để mua BĐS</p>`
+ : `<p class="good">✔ Phù hợp mục tiêu 2–3 năm</p>`;
+ strategy.innerHTML=html;
 }
 
 function calcHouse(){
  let t=+houseTarget.value;
  let m=+houseMonths.value;
  if(!t||!m)return;
- house={t,m};
- localStorage.setItem("house",JSON.stringify(house));
- render();
+ let per=Math.round(t/m);
+ localStorage.setItem("house",{t,m});
+ houseResult.innerHTML=
+ `<p>Mỗi tháng cần: <strong>${per.toLocaleString()}đ</strong></p>`;
 }
 
-function scenario(rate){
- let inc=income*rate;
- let need=house.t/house.m||0;
- let html=`<p>Thu nhập: <strong>${Math.round(inc).toLocaleString()}đ</strong></p>`;
- html+= inc*0.3>=need
- ? `<p class="good">✔ Vẫn đạt mục tiêu mua BĐS</p>`
- : `<p class="bad">❌ Cần giảm chi tiêu / tăng tiết kiệm</p>`;
- scenarioResult.innerHTML=html;
+function saveTravel(){
+ let t=+travelBudget.value;
+ localStorage.setItem("travel",t);
+ travelResult.innerHTML=
+ `<p>Du lịch: <strong>${t.toLocaleString()}đ / năm</strong></p>`;
 }
 
-function exportData(){
- let data={expenses,income,house};
- let blob=new Blob([JSON.stringify(data)],{type:"application/json"});
- let a=document.createElement("a");
- a.href=URL.createObjectURL(blob);
- a.download="taichinh_giadinh.json";
- a.click();
-}
-
-function importData(file){
- let r=new FileReader();
- r.onload=e=>{
-  let d=JSON.parse(e.target.result);
-  expenses=d.expenses||[];
-  income=d.income||0;
-  house=d.house||{};
-  localStorage.setItem("expenses",JSON.stringify(expenses));
-  localStorage.setItem("income",income);
-  localStorage.setItem("house",JSON.stringify(house));
-  render();
- };
- r.readAsText(file);
-}
-
-function render(){
- let totalExp=expenses.reduce((s,e)=>s+e.a,0);
- let save=income-totalExp;
- let dash=`
- <div class="item"><span>Thu nhập</span><strong>${income.toLocaleString()}đ</strong></div>
- <div class="item"><span>Chi tiêu</span><strong>${totalExp.toLocaleString()}đ</strong></div>
- <div class="item"><span>Tiết kiệm</span><strong>${save.toLocaleString()}đ</strong></div>
- `;
- if(house.t){
-  let p=Math.min(save/ (house.t/house.m)*100,100);
-  dash+=`<p class="small">Tiến độ mua BĐS</p>
-  <div class="progress"><div style="width:${p}%"></div></div>`;
- }
- dashboard.innerHTML=dash;
-
- let sum={};
- expenses.forEach(e=>sum[e.cat]=(sum[e.cat]||0)+e.a);
- if(window.chart)chart.destroy();
- chart=new Chart(expenseChart,{
-  type:"doughnut",
-  data:{labels:Object.keys(sum),datasets:[{data:Object.values(sum)}]}
- });
-}
-render();
+renderChart(); renderAssets(); renderStrategy();
 </script>
 
 </body>
